--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,10 @@ xcuserdata/
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
 # Pods/
+Pods
+!Podfile
+!Podfile.lock
+
 
 # Carthage
 #
